From Demo To MyDev/sample/retrieveSource/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>MT Leasing Lead Process</fullName>
        <description>MT Leasing Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Вход в лизинг</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Досбор документов</fullName>
        </values>
        <values>
            <fullName>Закрыто и не реализовано</fullName>
        </values>
        <values>
            <fullName>Закрыто и не реализовано лизинг</fullName>
        </values>
        <values>
            <fullName>ЛК оплатил дилеру</fullName>
        </values>
        <values>
            <fullName>Обращение принято ЛК</fullName>
        </values>
        <values>
            <fullName>Оплачен аванс</fullName>
        </values>
        <values>
            <fullName>Отправлена заявка в ЛК</fullName>
        </values>
        <values>
            <fullName>Подписан договор с ЛК</fullName>
        </values>
        <values>
            <fullName>Принято ГСБ</fullName>
        </values>
        <values>
            <fullName>Сделка одобрена</fullName>
        </values>
        <values>
            <fullName>Успешно реализовано</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>MT Sales Lead Process</fullName>
        <description>MT Sales Lead Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Вебинар</fullName>
        </values>
        <values>
            <fullName>Временный</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Закрыто и не реализовано</fullName>
        </values>
        <values>
            <fullName>Опрос</fullName>
        </values>
        <values>
            <fullName>Успешно реализовано</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Бренд</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budjet__c</fullName>
        <label>Бюджет</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Business_type__c</fullName>
        <label>Тип бизнеса</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Такси</fullName>
                </value>
                <value>
                    <fullName>Автохозяйство</fullName>
                </value>
                <value>
                    <fullName>Прочее</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Город</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Причина закрытия</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Страна</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Ответственный</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Точка входа</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_lead_channel__c</fullName>
        <label>Source (Lead channel)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Taxi_park_URL__c</fullName>
        <label>Веб-страница таксопарка</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Viewing_duration__c</fullName>
        <label>Продолжительность просмотра</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Viewing_percent__c</fullName>
        <label>Процент просмотра</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YaTaxi_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Партнер Яндекс.Такси</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amo_UID__c</fullName>
        <label>amo UID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contract_no__c</fullName>
        <label>Номер контракта</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filled_the_form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Заполнил форму</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>has_entity__c</fullName>
        <label>Есть действующий бизнес?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Да</fullName>
                </value>
                <value>
                    <fullName>Нет</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lang__c</fullName>
        <label>Язык</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>legal_short_name__c</fullName>
        <label>Сокращенное юр. наименование</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>participated_in_the_program__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Участие в программе</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ready_to_work__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Готовность сотрудничать</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>registration_date__c</fullName>
        <label>Дата регистрации</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>registration_time__c</fullName>
        <label>Дата и время регистрации</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>utm_campaign__c</fullName>
        <label>utm_campaign</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_content__c</fullName>
        <label>utm_content</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_source__c</fullName>
        <label>utm_source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>utm_term__c</fullName>
        <label>utm_term</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webinar_uniq_link__c</fullName>
        <label>Ссылка на вебинар</label>
        <type>Url</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>Budjet__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>YaTaxi_partner__c</columns>
        <columns>LEAD.RECORDTYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>Все открытые лиды</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Непросмотренные лиды</label>
    </listViews>
    <listViews>
        <fullName>New_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>Новые лиды</label>
    </listViews>
    <listViews>
        <fullName>Qualification</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>Лиды на стадии квалификации</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Новые сегодня</label>
    </listViews>
    <listViews>
        <fullName>queue_for_leads_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Очередь исполнителей</label>
        <queue>queue_for_leads</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>MT_Sales</fullName>
        <active>true</active>
        <businessProcess>MT Sales Lead Process</businessProcess>
        <label>МТ: Продажи</label>
    </recordTypes>
    <recordTypes>
        <fullName>RecordType</fullName>
        <active>true</active>
        <businessProcess>MT Leasing Lead Process</businessProcess>
        <label>МТ: Лизинг</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>